# probe

./: .clinerules  .dockerignore  .gitignore  .roomodes  .trigger-ci  .trigger-workflows  .vow-cooldown  ANALYSIS_JSON_VALIDATION_LOOP.md  ARCHITECTURE.md  BASH_TOOL_SUMMARY.md  BENCHMARKING.md  BUG_REPRODUCED.md  CACHE_INVALIDATION_ANALYSIS.md  CACHE_INVALIDATION_RESEARCH_REPORT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DOCKER-README.md  DUCKDB_IMPLEMENTATION_REVIEW.md  Dockerfile  EFFICIENCY_REPORT.md  ENHANCED_DEBUG_TELEMETRY.md  FIX_APPLIED.md  FIX_EARLY_RETURN.md  GIT_INTEGRATION_SUMMARY.md  HEURISTIC_ANALYSIS_REPORT.md  LSP_INDEXING_FIXES_SUMMARY.md  MILESTONE_2_SUMMARY.md  MILESTONE_5_SUMMARY.md  Makefile  PROOF_RUST_DOGFOOD_CASE_STUDY.md  PR_CHECKLIST.md  README.md  RETRY_FALLBACK_IMPLEMENTATION.md  SECURITY.md  SLED_REMOVAL_SUMMARY.md  WINDOWS-GUIDE.md  build-windows.bat  (+67 more)
.cargo/: config.toml
.claude/: settings.json
.githooks/: post-commit  pre-commit  pre-commit-vow
.prompts/: engineer.md
.proof/: dogfood-code-signal.txt  (+2 more)
examples/lsp-client/: .gitignore  Cargo.toml  README.md
examples/lsp-client/src/: client.rs  lib.rs  main.rs
examples/reranker/: Cargo.toml  DEBUG_OUTPUT_ANALYSIS.md  MODELS.md  MODEL_COMPARISON.md  MULTI_MODEL_ANALYSIS.md  PERFORMANCE_SUMMARY.md  README.md  RUST_BERT_COMPARISON.md  TOKENIZATION_GUIDE.md  check_rust_tokenizer.py  convert_to_torchscript.py  debug_scoring.py  debug_tokenization.py  download_models.sh  requirements.txt  run_comprehensive_benchmark.sh  simple_test.py  test_all_models.sh  test_bert_results.sh  test_cross_encoder.py  test_cross_encoder.sh  test_exact_comparison.py  test_parallel_performance.sh  test_scores.py
examples/reranker/rust_bert_test/: Cargo.toml  README.md
examples/reranker/rust_bert_test/src/: main.rs  simple_test.rs
examples/reranker/src/: benchmark.rs  bert_simulator.rs  demo.rs  lib.rs  main.rs  parallel_reranker.rs  reranker.rs
lsp-daemon/: CALL_HIERARCHY_CONVERTER_IMPLEMENTATION.md  Cargo.toml  README.md  build.rs
lsp-daemon/docs/: PROTOCOL_CONVERTER.md
lsp-daemon/examples/: check_dupes.rs  converter_example.rs  db_check_js.rs  turso_playground.rs
lsp-daemon/src/: cache_management.rs  cache_types.rs  call_graph_cache.rs  daemon.rs  database_cache_adapter.rs  database_cache_adapter_tests.rs  definition_handler.rs  edge_audit.rs  file_watcher.rs  fqn.rs  git_service.rs  git_service_test.rs  git_utils.rs  graph_exporter.rs  hash_utils.rs  health_monitor.rs  hover_handler.rs  ipc.rs  language_detector.rs  lib.rs  logging.rs  lsp_cache.rs  lsp_database_adapter.rs  lsp_registry.rs  lsp_server.rs  main.rs  path_resolver.rs  path_safety.rs  persistent_cache.rs  pid_lock.rs  pool.rs  position.rs  process_group.rs  protocol.rs  readiness_tracker.rs  references_handler.rs  server_manager.rs  socket_path.rs  test_tree_sitter.rs  watchdog.rs  (+4 more)
lsp-daemon/src/analyzer/: framework.rs  hybrid_analyzer.rs  lsp_analyzer.rs  mod.rs  tree_sitter_analyzer.rs  types.rs
lsp-daemon/src/analyzer/language_analyzers/: generic.rs  mod.rs  python.rs  rust.rs  typescript.rs
lsp-daemon/src/database/: PHASE_3_IMPLEMENTATION.md  converters.rs  duckdb_backend.rs  duckdb_bootstrap.rs  duckdb_queries.rs  duckdb_schema.sql  duckdb_test_schema.sql  enrichment_tracking.rs  examples.rs  mod.rs  sled_backend.rs  sqlite_backend.rs  sqlite_backend.rs.bak
lsp-daemon/src/database/migrations/: migration.rs  mod.rs  runner.rs  v001_complete_schema.rs  v001_initial_schema.rs  v002_example.rs  v003_remove_analysis_run_id.rs
lsp-daemon/src/indexing/: analyzer.rs  anomaly_guard.rs  ast_extractor.rs  batch_conversion.rs  config.rs  empty_result_cache.rs  enrichment_manager_integration.md  file_detector.rs  language_strategies.rs  lsp_enrichment_queue.rs  lsp_enrichment_worker.rs  manager.rs  mod.rs  pipelines.rs  progress.rs  queue.rs  skiplist.rs  symbol_conversion.rs  uid_validator.rs  versioning.rs
lsp-daemon/src/logging/: log_buffer.rs  mod.rs  persistent_layer.rs  persistent_log.rs
lsp-daemon/src/relationship/: lsp_client_wrapper.rs  lsp_enhancer.rs  merger.rs  mod.rs  structural_analyzer.rs  tree_sitter_extractor.rs  types.rs
lsp-daemon/src/relationship/language_patterns/: mod.rs  python.rs  rust.rs  rust_simplified.rs  typescript.rs
lsp-daemon/src/symbol/: language_support.rs  mod.rs  normalization.rs  tests.rs  uid_generator.rs  uid_normalization.rs  version_aware_uid.rs
lsp-daemon/src/symbol/dependency_path/: go.rs  js.rs  mod.rs  rust.rs
lsp-daemon/src/universal_cache/: document_provider.rs  integration_example.rs  integration_tests.rs  key.rs  layer.rs  mod.rs  monitoring.rs  policy.rs  store.rs  tests.rs
lsp-daemon/src/workspace/: branch.rs  config.rs  manager.rs  mod.rs  project.rs  tests.rs
lsp-daemon/tests/: README.md  architecture_validation_test.rs  branch_operations_tests.rs  cache_behavior_test.rs  caching_performance_tests.rs  comprehensive_end_to_end_test.rs  core_lsp_operation_tests.rs  database_integration_test.rs  database_storage_test.rs  dep_edge_end_to_end.rs  dep_uid_end_to_end.rs  document_lifecycle_edge_cases_tests.rs  empty_lsp_response_test.rs  end_to_end_validation.rs  enrichment_database_test.rs  git_integration_test.rs  indexing_analysis_demo.rs  indexing_integration_test.rs  integration_multi_workspace.rs  integration_test_framework.rs  language_server_behavior_tests.rs  lsp_cache_integration_tests.rs  lsp_error_handling_tests.rs  lsp_integration_tests.rs  lsp_performance_benchmarks.rs  lsp_symbol_resolution_tests.rs  manual_indexing_test.rs  minimal_integration_test.rs  mock_lsp_server_test.rs  null_edge_integration_test.rs  performance_benchmark.rs  performance_stress_test.rs  prd_schema_integration.rs  production_load_test.rs  production_readiness_test.rs  race_condition_tests.rs  real_code_analysis_test.rs  real_codebase_test.rs  references_database_integration_test.rs  regex_fix_test.rs  (+14 more)
lsp-daemon/tests/mock_lsp/: README.md  gopls_mock.rs  mod.rs  phpactor_mock.rs  protocol.rs  pylsp_mock.rs  rust_analyzer_mock.rs  server.rs  tsserver_mock.rs
(+961 files in other folders)
