[workspace]
members = [".", "lsp-daemon", "examples/lsp-client", "test_project/test_project", "lsp-test-project"]
resolver = "2"

[package]
name = "probe-code"
version = "0.6.0"
edition = "2021"
authors = ["Leonid Bugaev <leonsbox@gmail.com>"]
description = "AI-friendly, fully local, semantic code search tool for large codebases"
license = "MIT"
repository = "https://github.com/buger/probe"
readme = "README.md"
keywords = ["search", "code", "ast", "grep", "semantic"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[dependencies]
ahash = "0.8.6"  # Fast, non-cryptographic hash function
dashmap = "5.5.3"  # Thread-safe concurrent HashMap
anyhow = "1.0"
async-trait = "0.1"
atty = "0.2.13"
colored = "3.0.0"
dirs = "5.0.1"
grep-searcher = "0.1.14"
grep-regex = "0.1.12"
grep-printer = "0.2.2"
ignore = "0.4"
tree-sitter = "0.24.5"
tree-sitter-rust = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.23.6"
tree-sitter-go = "0.23.4"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.23.11"
tree-sitter-swift = { version = "0.7.0" }
tree-sitter-c-sharp = { version = "0.23.1" }
ast-grep-core = "0.36.1"
ast-grep-language = "0.36.1"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-stemmers = "1.2"
tokio = { version = "1", features = ["full"] }
tiktoken-rs = "0.6.0"
lsp-daemon = { path = "lsp-daemon" }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
regex = "1.9"
sha2 = "0.10"
futures = "0.3"
itertools = "0.14.0"
rayon = "1.8"
once_cell = "1.19.0"
decompound = "0.3.0"
thiserror = "2.0.12"
tracing-subscriber = "0.3"
lazy_static = "1.4.0"
rand = "0.8.5"
glob = "0.3.1"
arboard = "3.4.1"
md5 = "0.7.0"
lru = "0.12.5"
env_logger = "0.10"
simsimd = "6.1.0"  # SIMD-accelerated similarity metrics for vector operations
memchr = "2.7"  # SIMD-accelerated string searching and processing
wide = "0.7"  # Portable SIMD operations for text processing
aho-corasick = "1.1"  # SIMD-accelerated multi-pattern string matching
# BERT reranker dependencies - optional for ms-marco-tinybert reranker
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.20", optional = true }
hf-hub = { version = "0.3", features = ["tokio"], optional = true }
safetensors = { version = "0.4", optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3.10.1"
proptest = "1.2"
criterion = "0.5"
roxmltree = "0.18.0"
jsonschema = "0.17.1"
xml-schema = "0.2.0"
serial_test = "3.0"

# Windows-specific dependencies removed - we skip project config on Windows to avoid stack overflow

[lib]
name = "probe_code"
path = "src/lib.rs"

[[bin]]
name = "probe"
path = "src/main.rs"

[build-dependencies]
chrono = "0.4"

[features]
default = []
bert-reranker = [
    "candle-core",
    "candle-nn", 
    "candle-transformers",
    "tokenizers",
    "hf-hub",
    "safetensors",
    "parking_lot"
]


[[bench]]
name = "search_benchmarks"
harness = false

[[bench]]
name = "timing_benchmarks"
harness = false

[[bench]]
name = "parsing_benchmarks"
harness = false

[[bench]]
name = "simd_benchmarks"
harness = false

[profile.release]
opt-level = "z"  # Optimize for size ("s" also works, but "z" is smaller)
strip = true     # Strip symbols automatically
lto = true       # Link-time optimization
codegen-units = 1 # Slower compile, smaller binary
panic = "abort"  # Ditch unwinding code
