[package]
name = "lsp-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Leonid Bugaev <leonsbox@gmail.com>"]
description = "Multi-language LSP server pool daemon for instant code intelligence"
license = "MIT"
repository = "https://github.com/buger/probe"
keywords = ["lsp", "language-server", "daemon", "pool", "code-intelligence"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "lsp-daemon"
path = "src/main.rs"

[[bin]]
name = "test-tree-sitter"
path = "src/test_tree_sitter.rs"


[lib]
name = "lsp_daemon"
path = "src/lib.rs"

[features]
default = ["tree-sitter-rust", "tree-sitter-typescript", "tree-sitter-python"]
tree-sitter-rust = ["dep:tree-sitter-rust"]
tree-sitter-typescript = ["dep:tree-sitter-typescript"]
tree-sitter-javascript = ["dep:tree-sitter-javascript"]
tree-sitter-python = ["dep:tree-sitter-python"]
tree-sitter-go = ["dep:tree-sitter-go"]
tree-sitter-java = ["dep:tree-sitter-java"]
tree-sitter-c = ["dep:tree-sitter-c"]
tree-sitter-cpp = ["dep:tree-sitter-cpp"]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
toml = "0.8"
dirs = "5"
which = "6"
async-trait = "0.1"  # Required for DuckDB DatabaseBackend trait implementation
clap = { version = "4", features = ["derive"] }
regex = "1"
tempfile = "3"
chrono = "0.4"
fs2 = "0.4"
md5 = "0.7"
bincode = "1.3"
ignore = "0.4"
gix = "0.66"
pathdiff = "0.2"
futures = "0.3"
num_cpus = "1"  # Auto-detect optimal thread count for connection pool
flate2 = "1.0"
blake3 = "1.5"
moka = { version = "0.12", features = ["future"] }
thiserror = "1"
once_cell = "1.19"
turso = "0.1.4"
sha2 = "0.10.9"
rayon = "1.8"
tree-sitter = "0.24.5"

# Tree-sitter language parsers (optional for selective language support)
tree-sitter-rust = { version = "0.23.2", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-javascript = { version = "0.23.1", optional = true }
tree-sitter-python = { version = "0.23.6", optional = true }
tree-sitter-go = { version = "0.23.4", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-c = { version = "0.23.4", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "namedpipeapi", "fileapi", "handleapi", "winnt", "processthreadsapi"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14.0"
rand = "0.8"
