[package]
name = "lsp-daemon"
version = "0.6.0"
edition = "2021"
authors = ["Leonid Bugaev <leonsbox@gmail.com>"]
description = "Multi-language LSP server pool daemon for instant code intelligence"
license = "MIT"
repository = "https://github.com/buger/probe"
keywords = ["lsp", "language-server", "daemon", "pool", "code-intelligence"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "lsp-daemon"
path = "src/main.rs"

[[bin]]
name = "test-tree-sitter"
path = "src/test_tree_sitter.rs"


[lib]
name = "lsp_daemon"
path = "src/lib.rs"


[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
toml = "0.8"
dirs = "5"
which = "6"
async-trait = "0.1"  # Required for DuckDB DatabaseBackend trait implementation
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tempfile = "3"
fs2 = "0.4"
md5 = "0.7"
bincode = "1.3"
ignore = "0.4"
gix = "0.66"
pathdiff = "0.2"
futures = "0.3"
num_cpus = "1"  # Auto-detect optimal thread count for connection pool
flate2 = "1.0"
blake3 = "1.5"
moka = { version = "0.12", features = ["future"] }
thiserror = "1"
once_cell = "1.19"
turso = "0.1.4"
sha2 = "0.10.9"
rayon = "1.8"
tree-sitter = "0.24.5"
rusqlite = { version = "0.32", features = ["bundled"] }

# Tree-sitter language parsers - directly included like main probe app
tree-sitter-rust = "0.23.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-python = "0.23.6"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-ruby = "0.23.1"
tree-sitter-swift = "0.7.0"
tree-sitter-php = "0.23.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "namedpipeapi", "fileapi", "handleapi", "winnt", "processthreadsapi"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14.0"
rand = "0.8"
