[package]
name = "lsp-client"
version = "0.1.0"
edition = "2021"
description = "Example LSP client using lsp-daemon"

[[bin]]
name = "lsp-client"
path = "src/main.rs"

[dependencies]
lsp-daemon = { path = "../../lsp-daemon" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"